# morodomi_exspec

./: .exspec.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  action.yml
.claude/: dev-crew.json
.github/ISSUE_TEMPLATE/: false-negative.yml  false-positive.yml  question.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: init.rs  main.rs
crates/cli/tests/: init_e2e.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  extractor.rs  lib.rs  metrics.rs  observe.rs  output.rs  query_utils.rs  rules.rs  suppress.rs
crates/lang-php/: Cargo.toml
crates/lang-python/: Cargo.toml
crates/lang-python/queries/: assertion.scm  assignment_mapping.scm  bare_import_attribute.scm  django_url_pattern.scm  error_test.scm  helper_trace.scm  how_not_what.scm  import_contract.scm  import_pbt.scm  mock_assignment.scm  mock_usage.scm  parameterized.scm  private_in_assertion.scm  re_export.scm  relational_assertion.scm  route_decorator.scm  skip_test.scm  test_function.scm
crates/lang-python/src/: lib.rs  observe.rs
crates/lang-rust/: Cargo.toml
crates/lang-rust/queries/: assertion.scm  error_test.scm  exported_symbol.scm  helper_trace.scm  how_not_what.scm  private_in_assertion.scm  relational_assertion.scm
crates/lang-rust/src/: lib.rs  observe.rs
crates/lang-typescript/: Cargo.toml
crates/lang-typescript/queries/: assertion.scm  decorator.scm  error_test.scm  exported_symbol.scm  helper_trace.scm  how_not_what.scm  import_contract.scm  import_pbt.scm  mock_assignment.scm  mock_usage.scm  nextjs_route_handler.scm  parameterized.scm  private_in_assertion.scm  production_function.scm  re_export.scm  relational_assertion.scm  test_function.scm
crates/lang-typescript/src/: lib.rs  observe.rs  tsconfig.rs
docs/: README.md  SPEC.md  STATUS.md  ci.md  configuration.md  dogfooding-results.md  known-constraints.md  observe-boundaries.md  observe-eval-results.md  observe-ground-truth-python-httpx.md  observe-ground-truth-rust-tokio.md  observe-ground-truth-rust-tower.md  observe-ground-truth.md  observe-gt-guideline.md  philosophy.md  roadmap-v2.md  roadmap.md  severity-review.md
docs/cycles/: 20260306_0000_project-setup.md  20260306_0100_phase1-scaffolding.md  20260306_0200_phase2-python-tier1.md  20260306_0300_phase3a-typescript-suppression.md  20260306_0400_phase3b-t004-t008-config.md  20260306_0500_phase3b-cleanup.md  20260306_0600_phase3c-sarif-metrics.md  20260307_1200_issue13-private-attribute-detection.md  20260307_1400_t104-t105-hardcoded-relational.md  20260309_0100_custom-assertion-helpers.md  20260309_1800_ts-chai-method-call.md  20260310_1000_supertest-expect.md  20260310_1200_chai-sinon-vocab-arrow.md  20260310_1400_ignore-config-plumbing.md  20260311_1048_php-facade-should-receive.md  20260311_1146_t109-cjk-test-names.md  20260311_1300_python_assert_broadening.md  20260311_1330_php_add_to_assertion_count.md  20260311_1400_skip_only_test_exclusion.md  20260312_1147_t001_return_chai_property.md  (+51 more)
scripts/: evaluate_observe.py  test_evaluate_observe.py
(+166 files in other folders)
