[package]
name = "exspec-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exspec"
path = "src/main.rs"

[dependencies]
exspec-core = { path = "../core" }
exspec-lang-python = { path = "../lang-python" }
exspec-lang-typescript = { path = "../lang-typescript" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
