[package]
name = "exspec-core"
version.workspace = true
edition.workspace = true
description = "Core analysis engine for exspec"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-sarif = { version = "0.8", features = ["opt-builder"] }
toml = "0.8"
tree-sitter = "0.24"
streaming-iterator = "0.1"

[dev-dependencies]
tree-sitter-python = "0.23"
