[package]
name = "exspec-lang-python"
version = "0.1.2"
edition = "2021"
description = "Python language support for exspec"
license = "MIT"
repository = "https://github.com/morodomi/exspec"
authors = ["morodomi"]

[dependencies]
exspec-core = { path = "../core", version = "0.1.2" }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"
