[package]
name = "exspec-lang-rust"
version = "0.1.1"
edition = "2021"
description = "Rust language support for exspec"
license = "MIT"
repository = "https://github.com/morodomi/exspec"
authors = ["morodomi"]

[dependencies]
exspec-core = { path = "../core", version = "0.1.1" }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1"
