[package]
name = "exspec-lang-typescript"
version.workspace = true
edition.workspace = true
description = "TypeScript language support for exspec"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
exspec-core.workspace = true
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
